--- a/layouts/partials/head/custom-icons.html
+++ b/layouts/partials/head/custom-icons.html
@@ -3,7 +3,7 @@
 <link rel="icon" type="image/png" href="/fav/favicon-16x16.png" sizes="16x16">
 <link rel="icon" type="image/png" href="/fav/android-chrome-192x192.png" sizes="192x192">
 <link rel="icon" type="image/png" href="/fav/android-chrome-512x512.png" sizes="512x512">
-<link rel="icon" type="image/x-icon" href="/fav/favicon.ico" />
+<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 <link rel="apple-touch-icon" href="/fav/apple-touch-icon.png">
 <link rel="apple-touch-icon" href="/fav/apple-touch-icon.png" sizes="180x180">
 <!-- end: favicons -->
