improve site performance

--- a/layouts/partials/head/extensions.html
+++ b/layouts/partials/head/extensions.html
@@ -29,7 +29,7 @@
 
 <!-- pagefind -->
 <link href="/pagefind/pagefind-ui.css" rel="stylesheet"/>
-<script src="/pagefind/pagefind-ui.js"></script>
+<script src="/pagefind/pagefind-ui.js" async defer></script>
 <style>
 .pagefind-ui {
   max-width: 836px;
