improve image loading performance

--- a/layouts/partials/head/extensions.html
+++ b/layouts/partials/head/extensions.html
@@ -1,5 +1,4 @@
 <!-- prefetch -->
-<link rel="dns-prefetch" href="creativecommons.org" />
 <link rel="dns-prefetch" href="go.dev" />
 <link rel="dns-prefetch" href="github.com" />
 
@@ -8,17 +7,16 @@
 <link rel="preconnect" href="https://in.getclicky.com" crossorigin="anonymous"/>
 <link rel="preconnect" href="https://static.getclicky.com" crossorigin="anonymous"/>
 
-<link rel="prefetch" href="about/"/>
-<link rel="prefetch" href="talks/">
-<link rel="prefetch" href="research/">
-<link rel="prefetch" href="posts/">
+<link rel="prefetch" href="/img/av0_457x457.webp" as="image" fetchpriority="hugh">
+<link rel="prefetch" href="/img/cc_22x22.webp" as="image" fetchpriority="high">
+<link rel="prefetch" href="/img/bb_22x22.webp" as="image" fetchpriority="high">
 
 <script type="speculationrules">
   {
     "prerender": [
       {
         "source": "list",
-        "urls": ["about/", "talks/", "research/", "posts/"]
+        "urls": ["about/"]
       }
     ]
   }
